Fix body overflow

--- a/styles/main.css
+++ b/styles/main.css
@@ -3,7 +3,6 @@
 }
 
 body {
-  overflow: hidden;
   padding: 88px 16px 238px;
   background-color: #f0f0f0;
   font-family: "Poppins", sans-serif;
