--- a/styles/scss/base/_base.scss
+++ b/styles/scss/base/_base.scss
@@ -3,7 +3,6 @@
 }
 
 body {
-    overflow: hidden;
     padding: 88px 16px 238px;
     background-color: $offWhite;
     font-family: 'Poppins', sans-serif;
